Fixed spacing on dialog headings

--- a/scss/dialog.scss
+++ b/scss/dialog.scss
@@ -57,6 +57,7 @@
 
         .dialog-heading {
             margin-top: $padding-small;
+            padding-top: 0;
             padding-right: 4rem;
 
             font-size: 1.5rem;
